# StratifiedEmbeddings

./: .gitignore  embed_wass.py  pyproject.toml  run.py  run_airfrans.py  run_airfrans_cnn.py  visualize_shape_pressure.py
StratifiedEmbedding/: __init__.py  geometry.py  losses.py  stratified_dqe.py  viz_stratified.py
docs/: fixes.md
models/: GeometricCNNAutoencoder.py
